changed sass include paths to nuxt-ish

--- a/client/components/atoms/input/_vars.scss
+++ b/client/components/atoms/input/_vars.scss
@@ -1,5 +1,5 @@
-@import '../../../base/styles/_colors';
-@import '../../../base/styles/_states';
+@import '~/base/styles/_colors';
+@import '~/base/styles/_states';
 
 
 $placeholder-color: get-color('foreground-30');
